# Project-Advanced-Programming-course

./: README.md
game/: AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  HumanPlayer.cpp  HumanPlayer.h  LTexture.cpp  LTexture.h  Player.cpp  Player.h  SmartAIPlayer.cpp  SmartAIPlayer.h  Stones.txt  VARIABLES_PROTOTYPE.cpp  VARIABLES_PROTOTYPE.h  brick.cpp  brick.h  game.cpp  game.h  level.cpp  level.h  main.cpp  player.cpp  welcome.cpp  welcome.h  withoutSDL.cpp
